fix(house): prevent horizontal overflow on mobile devices
Belongs to #5396

--- a/app/frontend/stylesheets/segment.css
+++ b/app/frontend/stylesheets/segment.css
@@ -50,7 +50,7 @@
   }
 
   .title {
-    @apply text-left;
+    @apply min-w-0 truncate text-left;
   }
 
   .value {
